--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=mongodb://localhost:27017/mernauth
+DATABASE_URL=mongodb+srv://jayveer:jayveer@cluster0.omesz.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 PORT=5000
 NODE_ENV=development
 JWT_SECRET=upforce1234
