--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DATABASE_URL=mongodb+srv://jayveer:jayveer@cluster0.omesz.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+DATABASE_URL=mongodb+srv://meetvanapariya:meet1234@cluster0.17bps.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 PORT=5000
 NODE_ENV=development
-JWT_SECRET=upforce1234
+JWT_SECRET=upforcetech
 CRYPTO_SECRET='my_secret'
