--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.15",
     "morgan": "^1.10.0",
-    "multer": "^1.4.4",
+    "multer": "^1.4.4"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.15"
   }
 }
